fix header spacing

--- a/src/components/MainUI/MapPOI/style.css
+++ b/src/components/MainUI/MapPOI/style.css
@@ -356,6 +356,10 @@
     justify-content: flex-end;
 }
 
+.map-poi-edit-toggle-filter sl-divider {
+    margin-top: 0;
+}
+
 .map-poi-edit-toggle-filter ::part(base) {
     height: unset;
 }
@@ -414,7 +418,7 @@
 }
 
 .map-poi-category-selector-filter + sl-divider {
-    --spacing: var(--lgs-gutter-s);
+/ / margin-top: var(--lgs-gutter-s);
 }
 
 .map-poi-category-selector-filter::part(form-control-label) {
